# tree-sitter-engleri

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-engleri.pc.in
bindings/c/tree_sitter/: tree-sitter-engleri.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_engleri/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEngleriTests/: TreeSitterEngleriTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: explicit_sequence.txt  explicit_sequence_nested.txt  hello_world.txt  hello_world_escaped_letters.txt  hello_world_glue.txt  hello_world_newline.txt  hello_world_tagged.txt
